updating my first one

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -1,9 +1,8 @@
-# Configuration for Python Log Agent
+# Configuration for Python Log Agent - CDLOG
 
 
 # Here put the directory of where the log file are
-log_directory:
-  - "/var/log"
+log_directory: "/var/log"
 
 # Here put the file formats you want the agent to look for
 file_formats:
@@ -11,7 +10,8 @@ file_formats:
   - "log"
 
 # Here put the destionation server details
-destination_server:
-  ip: "192.168.1.100"
-  port: 12345
+destination_ip: "192.168.1.100"
+destination_port: "12345"
 
+# Here put if it is encrypted or not
+encrypted: "no"
