trying several formats

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -2,12 +2,14 @@
 
 
 # Here put the directory of where the log file are
-log_directory: "/var/log"
+log_directories:
+  - "/etc/cdlog"
+  - "/var/log"
 
 # Here put the file formats you want the agent to look for
 file_formats:
-  - "txt"
-  - "log"
+  - ".txt"
+  - ".log"
 
 # Here put the destionation server details
 destination_ip: "192.168.1.100"
