--- a/cdlog.conf
+++ b/cdlog.conf
@@ -6,7 +6,7 @@ log_directories:
   - "/etc/cdlog"
   - "/var/log"
 
-# Here put the file formats you want the agent to look for 1
+# Here put the file formats you want the agent to look for
 file_formats:
   - ".txt"
   - ".log"
