--- a/cdlog.conf
+++ b/cdlog.conf
@@ -14,5 +14,5 @@ file_formats:
 destination_ip: "192.168.1.100"
 destination_port: "8080"
 
-# Here put if it is encrypted or not
-encrypted: "no"
+# Here put the encryption key
+encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
