--- a/cdlog.conf
+++ b/cdlog.conf
@@ -16,3 +16,6 @@ destination_port: "8080"
 
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
+
+# Here define transport_protocol
+transport_protocol: "UDP"
