updating cdlog.py and cdlog.conf for having different formats for each directory

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -1,21 +1,22 @@
 # Configuration for Python Log Agent - CDLOG
 
-
-# Here put the directory of where the log file are
+# Here put the directories for gettings logs, for each file define formats
+# Add more directories as needed, put * for all formats
 log_directories:
-  - "/var/log"
+  - directory: "/var/log"
+    formats:
+      - ".txt"
+      - ".log"
+  - directory: "/etc/cdlog"
+    formats:
+      - "*"
 
-# Here put the file formats you want the agent to look for
-file_formats:
-  - ".txt"
-  - ".log"
-
-# Here put the destionation server details
+# Here put the destination server details
 destination_ip: "192.168.1.100"
 destination_port: "8080"
 
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
 
-# Here define transport_protocol
+# Here define the transport protocol
 transport_protocol: "UDP"
