addting try except for reading files

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -4,10 +4,13 @@
 # Add more directories as needed, put * for all formats
 log_directories:
   - directory: "/var/log"
+    name: var_log
     formats:
       - ".txt"
       - ".log"
+  
   - directory: "/etc/cdlog"
+    name: etc_cdlog
     formats:
       - "*"
 
@@ -20,3 +23,9 @@ encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
 
 # Here define the transport protocol
 transport_protocol: "UDP"
+processing:
+  inputs: [var_log, etc_cdlog]
+  add_fields: [time=10pm]
+  remove_fields: [name]
+  format: json
+  if_not_exists: ignore
