--- a/cdlog.conf
+++ b/cdlog.conf
@@ -15,8 +15,8 @@ log_directories:
       - "*"
 
 # Here put the destination server details
-destination_ip: "192.168.1.100"
-destination_port: "8080"
+destination_ip: "127.0.0.1"
+destination_port: 12345
 
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
