--- a/cdlog.conf
+++ b/cdlog.conf
@@ -12,7 +12,7 @@ log_directories:
   - directory: "/etc/cdlog"
     name: etc_cdlog
     formats:
-      - "*"
+      - ".log"
 
 # Here put the destination server details
 destination_ip: "127.0.0.1"
