added logs every x seconds

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -20,6 +20,7 @@ destination_port: 12345
 
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
+time_to_sent_logs_on_agent: 4
 
 # Here define the transport protocol
 transport_protocol: "UDP"
