--- a/cdlog.conf
+++ b/cdlog.conf
@@ -5,6 +5,8 @@
 log_directories:
   - directory: "/var/log"
     name: var_log
+    excludes:
+      - "/var/log/audit.log"
     formats:
       - ".txt"
       - ".log"
