changing observer to watch files and not directories

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -11,7 +11,7 @@ log_directories:
       - ".txt"
       - ".log"
   
-  - directory: "/etc/cdlog"
+  - directory: "/etc/cdlog/cdlog.py"
     name: etc_cdlog
     num_logs_to_send: 20
     formats:
