adding listening for data from server

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -25,6 +25,10 @@ destination_port: 12345
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
 time_to_sent_logs_on_agent: 4
 
+# Define listening details for incoming data
+listening_port: 12346
+listening_protocol: "UDP"
+
 # Here define the transport protocol
 transport_protocol: "UDP"
 processing:
