updating cdlog.conf for processing

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -31,9 +31,24 @@ listening_protocol: "UDP"
 
 # Here define the transport protocol
 transport_protocol: "UDP"
+
 processing:
-  inputs: [var_log, etc_cdlog]
-  add_fields: [time=10pm]
-  remove_fields: [name]
-  format: json
-  if_not_exists: ignore
+  - name: "process 1"
+    format: "json"
+    if_not_exists: "ignore"
+    inputs:
+      - var_log
+    actions:
+      - add_fields
+        fields:
+        - "time": "10pm"
+        - "date": "date.today()"
+          value_is_function: true
+      - remove_fields
+        fields:
+        - "name"
+      - change_fields
+        fields:
+        - "time": "20"
+    
+        
