--- a/copy_of_cdlog.conf
+++ b/copy_of_cdlog.conf
@@ -5,15 +5,14 @@
 log_directories:
   - directory: "/var/log"
     name: var_log
-    exclude: /var/log/audit.log
-    num_logs_to_send: 50
+    excludes:
+      - "/var/log/audit.log"
     formats:
       - ".txt"
       - ".log"
   
-  - directory: "/etc/cdlog"
+  - directory: "/etc/cdlog/cdlog.py"
     name: etc_cdlog
-    exclude: /var/log/audit.log
     num_logs_to_send: 20
     formats:
       - ".log"
@@ -24,15 +23,33 @@ destination_port: 12345
 
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
+time_to_sent_logs_on_agent: 4
 
-#
-time_to_sent_logs_on_agent: 10
+# Define listening details for incoming data
+listening_port: 12346
+listening_protocol: "UDP"
 
 # Here define the transport protocol
 transport_protocol: "UDP"
-processing:
-  inputs: [var_log, etc_cdlog]
-  add_fields: [time=10pm]
-  remove_fields: [name]
-  format: json
-  if_not_exists: ignore
+
+parsers:
+  - name: "parser 1"
+    format: "json"
+    if_not_exists: "ignore"
+    inputs:
+      - var_log
+    actions:
+      - add_fields:
+          fields:
+            - time: "10pm"
+            - date: "date.today()"
+              value_is_function: true
+      - remove_fields:
+          fields:
+            - "name"
+      - change_fields:
+          fields:
+            - time: "20"
+
+    
+        
