adding parsers for json and syslog

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -5,6 +5,7 @@
 log_directories:
   - directory: "/var/log"
     name: var_log
+    name_of_parser: "parser 1"
     excludes:
       - "/var/log/audit.log"
     formats:
@@ -32,23 +33,39 @@ listening_protocol: "UDP"
 # Here define the transport protocol
 transport_protocol: "UDP"
 
-processing:
-  - name: "process 1"
+parsers:
+  - name: "parser 1"
     format: "json"
     if_not_exists: "ignore"
     inputs:
       - var_log
     actions:
-      - add_fields
-        fields:
-        - "time": "10pm"
-        - "date": "date.today()"
-          value_is_function: true
-      - remove_fields
-        fields:
-        - "name"
-      - change_fields
-        fields:
-        - "time": "20"
-    
-        
+      - add_fields:
+          fields:
+            - time: "10pm"
+            - date: "datetime.datetime.now()"
+              value_is_function: true
+      - remove_fields:
+          fields:
+            - "message"
+      - change_fields:
+          fields:
+            - time: "20"
+
+  - name: "parser 2"
+    format: "syslog"
+    if_not_exists: "ignore"
+    inputs:
+      - var_log
+    actions:
+      - add_fields:
+          fields:
+            - time: "10pm"
+            - date: "datetime.datetime.now()"
+              value_is_function: true
+      - remove_fields:
+          fields:
+            - "field1"
+      - change_fields:
+          fields:
+            - field3: "50"
