--- a/copy_of_cdlog.conf
+++ b/copy_of_cdlog.conf
@@ -5,6 +5,7 @@
 log_directories:
   - directory: "/var/log"
     name: var_log
+    name_of_parser: "parser 1"
     excludes:
       - "/var/log/audit.log"
     formats:
@@ -42,14 +43,32 @@ parsers:
       - add_fields:
           fields:
             - time: "10pm"
-            - date: "date.today()"
+            - date: "datetime.datetime.now()"
               value_is_function: true
       - remove_fields:
           fields:
-            - "name"
+            - "message"
       - change_fields:
           fields:
             - time: "20"
+
+  - name: "parser 2"
+    format: "syslog"
+    if_not_exists: "ignore"
+    inputs:
+      - var_log
+    actions:
+      - add_fields:
+          fields:
+            - time: "10pm"
+            - date: "datetime.datetime.now()"
+              value_is_function: true
+      - remove_fields:
+          fields:
+            - "field1"
+      - change_fields:
+          fields:
+            - field3: "50"
 
     
         
