adding parser to port listener

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -3,7 +3,7 @@
 # Here put the directories for gettings logs, for each file define formats
 # Add more directories as needed, put * for all formats
 log_directories:
-  - directory: "/var/log"
+  - directory: "/var/lib/waagent/fast_track.json"
     name: var_log
     name_of_parser: "parser 1"
     excludes:
@@ -11,6 +11,7 @@ log_directories:
     formats:
       - ".txt"
       - ".log"
+      - ".json"
   
   - directory: "/etc/cdlog/cdlog.py"
     name: etc_cdlog
@@ -29,6 +30,7 @@ time_to_sent_logs_on_agent: 4
 # Define listening details for incoming data
 listening_port: 12346
 listening_protocol: "UDP"
+listening_parser_name: "parser1"
 
 # Here define the transport protocol
 transport_protocol: "UDP"
