updating cdlog.py to work with db

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -71,3 +71,18 @@ parsers:
       - change_fields:
           fields:
             - field3: "50"
+
+
+####################################### Database ########################
+db_credentials:
+  db_name: "ofek_db"
+  user: "postgres"
+  password: "Aa123456"
+  host: "127.0.0.1"
+  port: "5432"
+
+db_command:
+  SELECT: "age"
+  FROM: "ofek_table"
+  WHERE: "age != 100"
+  SELECT_TIME: 20
