updating cdlog.py to work with db - fixing cdlog.conf

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -82,7 +82,7 @@ db_credentials:
   port: "5432"
 
 db_command:
-  SELECT: "age"
+  SELECT: "age, name"
   FROM: "ofek_table"
   WHERE: "age != 100"
-  SELECT_TIME: 20
+  SELECT_TIME: 2
