adding parser for data from db

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -23,17 +23,21 @@ log_directories:
 destination_ip: "127.0.0.1"
 destination_port: 12345
 
+# Here define the transport protocol
+transport_protocol: "UDP"
+
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
 time_to_sent_logs_on_agent: 4
 
+
+#################### Listening ######################
 # Define listening details for incoming data
 listening_port: 12346
 listening_protocol: "UDP"
 listening_parser_name: "parser 1"
 
-# Here define the transport protocol
-transport_protocol: "UDP"
+################################### Parsers ########################
 
 parsers:
   - name: "parser 1"
@@ -86,3 +90,4 @@ db_command:
   FROM: "ofek_table"
   WHERE: "age != 100"
   SELECT_TIME: 2
+db_parser_name
