adding parser for change_format

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -57,6 +57,8 @@ parsers:
       - change_fields:
           fields:
             - time: "20"
+      - change_format:
+          new_format: "syslog"
 
   - name: "parser 2"
     format: "syslog"
@@ -75,6 +77,8 @@ parsers:
       - change_fields:
           fields:
             - field3: "50"
+      - change_format:
+          new_format: "json"
 
 
 ####################################### Database ########################
