updating cdlog.py to handle parser of timestamp in syslog. there is still problem with r'' in conf

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -11,7 +11,6 @@ log_directories:
     formats:
       - ".txt"
       - ".log"
-      - ".json"
   
   - directory: "/etc/cdlog/cdlog.py"
     name: etc_cdlog
@@ -35,21 +34,23 @@ time_to_sent_logs_on_agent: 4
 # Define listening details for incoming data
 listening_port: 12346
 listening_protocol: "UDP"
-listening_parser_name: "parser 1"
+listening_parser_name: "parser 2"
 
 ################################### Parsers ########################
 
 parsers:
   - name: "parser 1"
     format: "json"
+    # ignore or fail
     if_not_exists: "ignore"
+
     inputs:
       - var_log
     actions:
       - add_fields:
           fields:
             - time: "10pm"
-            - date: "datetime.datetime.now()"
+            - date: "datetime.now()"
               value_is_function: true
       - remove_fields:
           fields:
@@ -57,6 +58,10 @@ parsers:
       - change_fields:
           fields:
             - time: "20"
+      - change_timestamp_format:
+          formats:
+            former_format: "%Y-%m-%dT%H:%M:%S.%fZ"
+            new_format: "%Y-%m-%d %H:%M:%S"
       - change_format:
           new_format: "syslog"
 
@@ -69,7 +74,7 @@ parsers:
       - add_fields:
           fields:
             - time: "10pm"
-            - date: "datetime.datetime.now()"
+            - date: "datetime.now()"
               value_is_function: true
       - remove_fields:
           fields:
@@ -77,21 +82,26 @@ parsers:
       - change_fields:
           fields:
             - field3: "50"
+      - change_timestamp_format:
+          formats:
+            former_format: "%Y-%m-%d %H:%M:%S.%f"
+            new_format: "%Y-%m-%d %H:%M"
+            syslog_regex: "\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{6}"
       - change_format:
           new_format: "json"
 
 
 ####################################### Database ########################
-db_credentials:
-  db_name: "ofek_db"
-  user: "postgres"
-  password: "Aa123456"
-  host: "127.0.0.1"
-  port: "5432"
-
-db_command:
-  SELECT: "age, name"
-  FROM: "ofek_table"
-  WHERE: "age != 100"
-  SELECT_TIME: 2
-db_parser_name: "parser 1"
+#db_credentials:
+#  db_name: "ofek_db"
+#  user: "postgres"
+#  password: "Aa123456"
+#  host: "127.0.0.1"
+#  port: "5432"
+#
+#db_command:
+#  SELECT: "age, name"
+#  FROM: "ofek_table"
+#  WHERE: "age != 100"
+#  SELECT_TIME: 20
+#db_parser_name: "parser 1"
