adding 'r' in cdlog.conf

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -86,7 +86,7 @@ parsers:
           formats:
             former_format: "%Y-%m-%d %H:%M:%S.%f"
             new_format: "%Y-%m-%d %H:%M"
-            syslog_regex: "\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{6}"
+            syslog_regex: 'r"\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{6}"'
       - change_format:
           new_format: "json"
 
