adding parser format from csv to json

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -11,12 +11,19 @@ log_directories:
     formats:
       - ".txt"
       - ".log"
+      - ".json"
   
   - directory: "/etc/cdlog/cdlog.py"
     name: etc_cdlog
     num_logs_to_send: 20
     formats:
       - ".log"
+  - directory: "/snap/core20/2182/usr/share/distro-info/ubuntu.csv"
+    name_of_parser: "parser 3"
+    num_logs_to_send: 20
+    formats:
+      - ".csv"
+    
 
 # Here put the destination server details
 destination_ip: "127.0.0.1"
@@ -87,6 +94,13 @@ parsers:
             former_format: "%Y-%m-%d %H:%M:%S.%f"
             new_format: "%Y-%m-%d %H:%M"
             syslog_regex: 'r"\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{6}"'
+      - change_format:
+          new_format: "json"
+
+  - name: "parser 3"
+    format: "csv"
+    if_not_exists: "ignore"
+    actions:
       - change_format:
           new_format: "json"
 
