adding parser format from csv to syslog

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -102,7 +102,7 @@ parsers:
     if_not_exists: "ignore"
     actions:
       - change_format:
-          new_format: "json"
+          new_format: "syslog"
 
 
 ####################################### Database ########################
