adding parser from syslog to json

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -41,7 +41,7 @@ time_to_sent_logs_on_agent: 4
 # Define listening details for incoming data
 listening_port: 12346
 listening_protocol: "UDP"
-listening_parser_name: "parser 2"
+listening_parser_name: "parser 3"
 
 ################################### Parsers ########################
 
@@ -98,11 +98,12 @@ parsers:
           new_format: "json"
 
   - name: "parser 3"
-    format: "csv"
+    format: "syslog"
     if_not_exists: "ignore"
     actions:
       - change_format:
-          new_format: "syslog"
+          new_format: "json"
+          syslog_regex: 'r"<(?P<priority>\d+)>\s*(?P<timestamp>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{6})\s*(?P<hostname>\S+)\s+(?P<app_name>\S+):\s(?P<message>.*)$"'
 
 
 ####################################### Database ########################
