adding changes by test

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -35,6 +35,7 @@ transport_protocol: "UDP"
 # Here put the encryption key
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
 time_to_sent_logs_on_agent: 4
+path_to_cdlog_log_file: '/etc/cdlog/cdlog.log'
 
 
 #################### Listening ######################
@@ -113,10 +114,16 @@ parsers:
 #  password: "Aa123456"
 #  host: "127.0.0.1"
 #  port: "5432"
-#
-#db_command:
-#  SELECT: "age, name"
-#  FROM: "ofek_table"
-#  WHERE: "age != 100"
-#  SELECT_TIME: 20
-#db_parser_name: "parser 1"
+
+
+# you can define by format or without, if you define both only by format will count
+
+db_command_by_format:
+  SELECT: "age, name"
+  FROM: "ofek_table"
+  WHERE: "age != 100"
+  SELECT_TIME: 20
+db_command_without_format:
+  command: "select * from ofek_table where age != 100;"
+  select_time: 20
+db_parser_name: "parser 1"
