adding changes by test - adding csv_split_icon

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -36,6 +36,7 @@ transport_protocol: "UDP"
 encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
 time_to_sent_logs_on_agent: 4
 path_to_cdlog_log_file: '/etc/cdlog/cdlog.log'
+csv_split_icon: ","
 
 
 #################### Listening ######################
