adding after ori, base64 encrpytion key and reorginazing conf file

--- a/cdlog.conf
+++ b/cdlog.conf
@@ -1,5 +1,9 @@
 # Configuration for Python Log Agent - CDLOG
 
+
+############################## Input ##################################
+
+
 # Here put the directories for gettings logs, for each file define formats
 # Add more directories as needed, put * for all formats
 log_directories:
@@ -25,25 +29,38 @@ log_directories:
       - ".csv"
     
 
-# Here put the destination server details
-destination_ip: "127.0.0.1"
-destination_port: 12345
-
-# Here define the transport protocol
-transport_protocol: "UDP"
-
-# Here put the encryption key
-encryption_key: "icM1Ve2trdRkDISzmBhVHczeyrpVGyXyw_AcNeHCPPM="
-time_to_sent_logs_on_agent: 4
-path_to_cdlog_log_file: '/etc/cdlog/cdlog.log'
-csv_split_icon: ","
-
 
 #################### Listening ######################
 # Define listening details for incoming data
 listening_port: 12346
 listening_protocol: "UDP"
 listening_parser_name: "parser 3"
+
+
+####################################### Database ########################
+#db_credentials:
+#  db_name: "ofek_db"
+#  user: "postgres"
+#  password: "Aa123456"
+#  host: "127.0.0.1"
+#  port: "5432"
+
+
+# you can define by format or without, if you define both only by format will count
+
+db_command_by_format:
+  SELECT: "age, name"
+  FROM: "ofek_table"
+  WHERE: "age != 100"
+  SELECT_TIME: 20 #in seconds
+db_command_without_format:
+  command: "select * from ofek_table where age != 100;"
+  select_time: 20 #in seconds
+db_parser_name: "parser 1"
+
+
+############################ End of input #####################################
+
 
 ################################### Parsers ########################
 
@@ -107,24 +124,21 @@ parsers:
           new_format: "json"
           syslog_regex: 'r"<(?P<priority>\d+)>\s*(?P<timestamp>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}\.\d{6})\s*(?P<hostname>\S+)\s+(?P<app_name>\S+):\s(?P<message>.*)$"'
 
-
-####################################### Database ########################
-#db_credentials:
-#  db_name: "ofek_db"
-#  user: "postgres"
-#  password: "Aa123456"
-#  host: "127.0.0.1"
-#  port: "5432"
+################################### End of parsers ################################
 
 
-# you can define by format or without, if you define both only by format will count
+############################### Output ##########################################
+# Here put the destination server details
+destination_ip: "127.0.0.1"
+destination_port: 12345
 
-db_command_by_format:
-  SELECT: "age, name"
-  FROM: "ofek_table"
-  WHERE: "age != 100"
-  SELECT_TIME: 20
-db_command_without_format:
-  command: "select * from ofek_table where age != 100;"
-  select_time: 20
-db_parser_name: "parser 1"
+# Here define the transport protocol
+transport_protocol: "UDP"
+
+# Here put the encryption key in base64
+encryption_key: "aWNNMVZlMnRyZFJrRElTem1CaFZIY3pleXJwVkd5WHl3X0FjTmVIQ1BQTQ==="
+time_to_sent_logs_on_agent: 4
+path_to_cdlog_log_file: '/etc/cdlog/cdlog.log'
+csv_split_icon: ","
+
+########################## End of output #########################################
